syntax = "proto3";
package org.mollusk.svm;

// Compute budget for instructions.
message ComputeBudget {
    uint64 compute_unit_limit = 1;
    uint64 log_64_units = 2;
    uint64 create_program_address_units = 3;
    uint64 invoke_units = 4;
    uint64 max_instruction_stack_depth = 5;
    uint64 max_instruction_trace_length = 6;
    uint64 sha256_base_cost = 7;
    uint64 sha256_byte_cost = 8;
    uint64 sha256_max_slices = 9;
    uint64 max_call_depth = 10;
    uint64 stack_frame_size = 11;
    uint64 log_pubkey_units = 12;
    uint64 max_cpi_instruction_size = 13;
    uint64 cpi_bytes_per_unit = 14;
    uint64 sysvar_base_cost = 15;
    uint64 secp256k1_recover_cost = 16;
    uint64 syscall_base_cost = 17;
    uint64 curve25519_edwards_validate_point_cost = 18;
    uint64 curve25519_edwards_add_cost = 19;
    uint64 curve25519_edwards_subtract_cost = 20;
    uint64 curve25519_edwards_multiply_cost = 21;
    uint64 curve25519_edwards_msm_base_cost = 22;
    uint64 curve25519_edwards_msm_incremental_cost = 23;
    uint64 curve25519_ristretto_validate_point_cost = 24;
    uint64 curve25519_ristretto_add_cost = 25;
    uint64 curve25519_ristretto_subtract_cost = 26;
    uint64 curve25519_ristretto_multiply_cost = 27;
    uint64 curve25519_ristretto_msm_base_cost = 28;
    uint64 curve25519_ristretto_msm_incremental_cost = 29;
    uint32 heap_size = 30;
    uint64 heap_cost = 31;
    uint64 mem_op_base_cost = 32;
    uint64 alt_bn128_addition_cost = 33;
    uint64 alt_bn128_multiplication_cost = 34;
    uint64 alt_bn128_pairing_one_pair_cost_first = 35;
    uint64 alt_bn128_pairing_one_pair_cost_other = 36;
    uint64 big_modular_exponentiation_cost = 37;
    uint64 poseidon_cost_coefficient_a = 38;
    uint64 poseidon_cost_coefficient_c = 39;
    uint64 get_remaining_compute_units_cost = 40;
    uint64 alt_bn128_g1_compress = 41;
    uint64 alt_bn128_g1_decompress = 42;
    uint64 alt_bn128_g2_compress = 43;
    uint64 alt_bn128_g2_decompress = 44;
}